# Warehouse

./: .env  pyproject.toml
src/: __init__.py  main.py
src/core/: config.py  database.py  models.py  setup.py
src/middlewares/: authorization.py
src/models/schemas/: address.py  auth.py  categories.py  documents.py  expense_categories.py  expenses.py  goods.py  goods_documents.py  goods_history.py  person.py  role.py  status.py  type.py  users.py
src/routes/: __init__.py
src/routes/api/: __init__.py  add.py  address.py  auth.py  categories.py  documents.py  expense_categories.py  expenses.py  goods.py  goods_documents.py  image_loader.py  person.py  role.py  status.py  type.py  users.py
src/services/: history_goods.py
